[gd_scene load_steps=50 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/player.shader" type="Shader" id=2]
[ext_resource path="res://assets/animations.png" type="Texture" id=3]
[ext_resource path="res://assets/shadows.png" type="Texture" id=4]
[ext_resource path="res://player/states/double_kick.gd" type="Script" id=5]
[ext_resource path="res://player/states/ingame.gd" type="Script" id=6]
[ext_resource path="res://player/states/ready.gd" type="Script" id=7]
[ext_resource path="res://player/states/jump.gd" type="Script" id=8]
[ext_resource path="res://player/states/attack.gd" type="Script" id=9]
[ext_resource path="res://player/states/flying_kick.gd" type="Script" id=10]
[ext_resource path="res://player/states/back_flip.gd" type="Script" id=11]
[ext_resource path="res://player/states/fall.gd" type="Script" id=12]
[ext_resource path="res://player/states/block.gd" type="Script" id=13]
[ext_resource path="res://sfx/mplayer.tscn" type="PackedScene" id=14]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/belt_color = null
shader_param/kimono_color1 = null
shader_param/kimono_color2 = null

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

void fragment() 
{
	COLOR = texture(TEXTURE, UV); //read from texture
	if (COLOR.a==1.0)
 		COLOR.a = 0.2;
}
"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7.05006, 5.9 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8.30006, 4.9 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10.5501, 5.9 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 7.80006, 6.14999 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 5.55006, 3.14999 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 4.55, 3.65 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 4.05, 2.9 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 3.8, 4.9 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 3.55, 4.65 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 3.55, 3.9 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 4.55, 3.4 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 4.55, 4.15 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 4.05, 3.4 )

[sub_resource type="Animation" id=17]
length = 0.8
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.48, 0.56, 0.64, 0.72 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fight"
} ]
}

[sub_resource type="Animation" id=18]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 34 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fight"
} ]
}

[sub_resource type="Animation" id=19]
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27, 25 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hit_on"
}, {
"args": [  ],
"method": "hit_off"
} ]
}

[sub_resource type="Animation" id=20]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 30 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "shout"
}, {
"args": [  ],
"method": "hit_on"
}, {
"args": [  ],
"method": "hit_off"
}, {
"args": [  ],
"method": "fight"
} ]
}

[sub_resource type="Animation" id=21]
length = 2.8
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 37, 38, 39, 40, 53, 54 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fight"
} ]
}

[sub_resource type="Animation" id=22]
length = 2.8
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 2, 2.2, 2.4, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 41, 42, 43, 44, 51, 52, 53, 54 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fight"
} ]
}

[sub_resource type="Animation" id=23]
length = 2.8
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 45, 46, 47, 48, 49, 50 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fight"
} ]
}

[sub_resource type="Animation" id=24]
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "wataa"
}, {
"args": [  ],
"method": "hit_on"
}, {
"args": [  ],
"method": "hit_off"
} ]
}

[sub_resource type="Animation" id=25]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 18 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "hit_on"
}, {
"args": [  ],
"method": "hit_off"
}, {
"args": [  ],
"method": "fight"
} ]
}

[sub_resource type="Animation" id=26]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 28, 29 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "shout"
}, {
"args": [  ],
"method": "hit_on"
}, {
"args": [  ],
"method": "fight"
} ]
}

[sub_resource type="Animation" id=27]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 14 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "shout"
}, {
"args": [  ],
"method": "hit_on"
}, {
"args": [  ],
"method": "hit_off"
}, {
"args": [  ],
"method": "fight"
} ]
}

[sub_resource type="Animation" id=28]
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=29]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 20 ]
}

[sub_resource type="Animation" id=30]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 16 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fight"
} ]
}

[sub_resource type="Animation" id=31]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 35, 36 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hit_on"
}, {
"args": [  ],
"method": "fight"
} ]
}

[sub_resource type="Animation" id=32]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 32, 33 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "shout"
}, {
"args": [  ],
"method": "hit_on"
}, {
"args": [  ],
"method": "fight"
} ]
}

[sub_resource type="Animation" id=33]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 23 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "shout"
}, {
"args": [  ],
"method": "hit_on"
}, {
"args": [  ],
"method": "hit_off"
}, {
"args": [  ],
"method": "fight"
} ]
}

[sub_resource type="Animation" id=34]
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="Animation" id=35]
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 55, 3 ]
}

[node name="player" type="Node2D"]
script = ExtResource( 1 )

[node name="rotate" type="Node2D" parent="."]
editor/display_folded = true

[node name="player" type="Sprite" parent="rotate"]
material = SubResource( 1 )
texture = ExtResource( 3 )
vframes = 7
hframes = 8
frame = 53

[node name="shadow" type="Sprite" parent="rotate"]
material = SubResource( 3 )
position = Vector2( 0, 96 )
scale = Vector2( 1, -1 )
texture = ExtResource( 4 )
vframes = 7
hframes = 8
frame = 29

[node name="weak_areas" type="Node2D" parent="rotate"]
editor/display_folded = true

[node name="top" type="Area2D" parent="rotate/weak_areas"]
editor/display_folded = true
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="rotate/weak_areas/top"]
position = Vector2( -2.5, 2.25 )
shape = SubResource( 4 )

[node name="center" type="Area2D" parent="rotate/weak_areas"]
editor/display_folded = true
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="rotate/weak_areas/center"]
position = Vector2( -2.75, 19 )
shape = SubResource( 5 )

[node name="bottom" type="Area2D" parent="rotate/weak_areas"]
editor/display_folded = true
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="rotate/weak_areas/bottom"]
position = Vector2( -1, 42.25 )
shape = SubResource( 6 )

[node name="hit_areas" type="Node2D" parent="rotate"]
editor/display_folded = true

[node name="head" type="Area2D" parent="rotate/hit_areas"]
editor/display_folded = true
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rotate/hit_areas/head"]
position = Vector2( 20.75, 3 )
shape = SubResource( 7 )

[node name="footsweep" type="Area2D" parent="rotate/hit_areas"]
editor/display_folded = true
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rotate/hit_areas/footsweep"]
position = Vector2( 43, 45 )
shape = SubResource( 8 )

[node name="flying_kick" type="Area2D" parent="rotate/hit_areas"]
editor/display_folded = true
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rotate/hit_areas/flying_kick"]
position = Vector2( 33.75, 2 )
shape = SubResource( 9 )

[node name="stomach_punch" type="Area2D" parent="rotate/hit_areas"]
editor/display_folded = true
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rotate/hit_areas/stomach_punch"]
position = Vector2( 33.75, 24.75 )
shape = SubResource( 10 )

[node name="double_kick" type="Area2D" parent="rotate/hit_areas"]
editor/display_folded = true
visible = false
collision_layer = 2

[node name="left" type="CollisionShape2D" parent="rotate/hit_areas/double_kick"]
position = Vector2( -31.25, 1.5 )
shape = SubResource( 11 )

[node name="right" type="CollisionShape2D" parent="rotate/hit_areas/double_kick"]
position = Vector2( 32, 1.5 )
shape = SubResource( 12 )

[node name="front_punch" type="Area2D" parent="rotate/hit_areas"]
editor/display_folded = true
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rotate/hit_areas/front_punch"]
position = Vector2( 23.75, 7.5 )
shape = SubResource( 13 )

[node name="face_kick" type="Area2D" parent="rotate/hit_areas"]
editor/display_folded = true
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rotate/hit_areas/face_kick"]
position = Vector2( 24.75, -0.25 )
shape = SubResource( 14 )

[node name="stomach_kick" type="Area2D" parent="rotate/hit_areas"]
editor/display_folded = true
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rotate/hit_areas/stomach_kick"]
position = Vector2( 25.75, 13.5 )
shape = SubResource( 15 )

[node name="shin_kick" type="Area2D" parent="rotate/hit_areas"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rotate/hit_areas/shin_kick"]
position = Vector2( 29, 35.5 )
shape = SubResource( 16 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/back_flip = SubResource( 17 )
anims/block = SubResource( 18 )
anims/double_kick = SubResource( 19 )
anims/face_kick = SubResource( 20 )
anims/fall1 = SubResource( 21 )
anims/fall2 = SubResource( 22 )
anims/fall3 = SubResource( 23 )
anims/flying_kick = SubResource( 24 )
anims/footsweep_kick = SubResource( 25 )
anims/front_punch = SubResource( 26 )
anims/head_butt = SubResource( 27 )
anims/idle = SubResource( 28 )
anims/jump = SubResource( 29 )
anims/ready = SubResource( 30 )
anims/shin_kick = SubResource( 31 )
anims/stomach_kick = SubResource( 32 )
anims/stomach_punch = SubResource( 33 )
anims/walk = SubResource( 34 )
anims/walk_back = SubResource( 35 )

[node name="states" type="Node" parent="."]

[node name="double_kick" type="Node" parent="states"]
script = ExtResource( 5 )

[node name="ingame" type="Node" parent="states"]
script = ExtResource( 6 )

[node name="ready" type="Node" parent="states"]
script = ExtResource( 7 )

[node name="jump" type="Node" parent="states"]
script = ExtResource( 8 )

[node name="attack" type="Node" parent="states"]
script = ExtResource( 9 )

[node name="flying_kick" type="Node" parent="states"]
script = ExtResource( 10 )

[node name="back_flip" type="Node" parent="states"]
script = ExtResource( 11 )

[node name="fall" type="Node" parent="states"]
script = ExtResource( 12 )

[node name="block" type="Node" parent="states"]
script = ExtResource( 13 )

[node name="mplayer" parent="." instance=ExtResource( 14 )]
